test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_signed_type_expr.draco
signed 32767-1 a;

proc main() void : a := 0; corp;
