test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_sizeof_expr_non_type_arg.draco
proc main() void : a := sizeof(a+1); corp;

